# hearthstonejutska

./: notes.md  pyproject.toml  settings.ini  tasks.py
Documentation/: async.md  plan.md
hearthstonejutska/: config.py  log_watcher.py  main.py
hearthstonejutska/log_modules/: dir_monitor.py  log_file_reader.py  log_reader.py
hearthstonejutska/service/: log_service.py  path_service.py
hearthstonejutska/ui/: logTab.py  log_tab.py  path_tab.py  ui.py
